--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "Serverless shopping application",
   "dependencies": {
+    "aws-xray-sdk": "^2.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.617.0",
-    "aws-xray-sdk": "^2.5.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
