--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -49,6 +49,22 @@ functions:
         - dynamodb:PutItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SHOP_ITEMS_TABLE}
 
+  GetShoppingItemsOfUser:
+    handler: src/lambda/http/getShoppingItemsOfUser.handler
+    events:
+      - http:
+          method: get
+          path: shoppingItemsOfUser
+          cors: true
+          # authorizer: Auth
+          reqValidatorName: RequestBodyValidator
+    iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SHOP_ITEMS_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
+
+
 resources:
   Resources:
     GatewayResponseDefault4XX:
