--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -125,6 +125,30 @@ functions:
         - s3:PutObject
       Resource: arn:aws:s3:::${self:provider.environment.SHOPPING_S3_BUCKET}/*
 
+  DeleteShoppingItem:
+    handler: src/lambda/http/deleteShoppingItem.handler
+    events:
+      - http:
+          method: delete
+          path: shoppingItem/{shoppingId}
+          cors: true
+          # authorizer: Auth
+          reqValidatorName: RequestBodyValidator
+    iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:DeleteItem
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SHOP_ITEMS_TABLE}
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+      Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.SHOP_ITEMS_TABLE}/index/${self:provider.environment.SHOPPING_ITEM_ID_INDEX}
+    - Effect: Allow
+      Action:
+        - s3:GetObject
+        - s3:DeleteObject
+      Resource: arn:aws:s3:::${self:provider.environment.SHOPPING_S3_BUCKET}/*
+
 resources:
   Resources:
     GatewayResponseDefault4XX:
