--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Serverless shopping application",
   "dependencies": {
     "aws-xray-sdk": "^2.5.0",
+    "axios": "^0.19.2",
     "jsonwebtoken": "^8.5.1",
     "serverless-iam-roles-per-function": "^2.0.2",
     "source-map-support": "^0.5.10"
