--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -38,6 +38,9 @@ functions:
           method: get
           path: hello
 
+  Auth:
+    handler: src/lambda/auth/auth0Authorizer.handler
+
   CreateShoppingItem:
     handler: src/lambda/http/createShoppingItem.handler
     events:
@@ -45,7 +48,7 @@ functions:
           method: post
           path: shoppingItem
           cors: true
-          # authorizer: Auth
+          authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
@@ -60,7 +63,7 @@ functions:
           method: get
           path: shoppingItemsOfUser
           cors: true
-          # authorizer: Auth
+          authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
@@ -75,7 +78,6 @@ functions:
           method: get
           path: shoppingItems
           cors: true
-          # authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
@@ -90,7 +92,7 @@ functions:
           method: patch
           path: shoppingItem/{shoppingId}
           cors: true
-          # authorizer: Auth
+          authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
@@ -109,7 +111,7 @@ functions:
           method: post
           path: shoppingItem/{shoppingId}/attachment
           cors: true
-          # authorizer: Auth
+          authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
@@ -132,7 +134,7 @@ functions:
           method: delete
           path: shoppingItem/{shoppingId}
           cors: true
-          # authorizer: Auth
+          authorizer: Auth
           reqValidatorName: RequestBodyValidator
     iamRoleStatements:
     - Effect: Allow
