--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -11,6 +11,7 @@ custom:
 plugins:
   - serverless-webpack
   - serverless-iam-roles-per-function
+  - serverless-plugin-tracing
 
 provider:
   name: aws
@@ -18,6 +19,10 @@ provider:
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'eu-west-2'}
+
+  tracing: # to enable xray
+    lambda: true # for lambda functions
+    apiGateway: true # for api gateway
 
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
