--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.617.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "serverless-plugin-tracing": "^2.0.0",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.2.4",
